[gd_scene load_steps=10 format=3 uid="uid://d3fdk1rhageac"]

[ext_resource type="Texture2D" uid="uid://c4qa0j2q16tsl" path="res://game/cards/card_wizard.png" id="1_bs2ym"]
[ext_resource type="Script" path="res://game/cards/card_wizard.gd" id="2_epinh"]
[ext_resource type="Texture2D" uid="uid://d2kkwimpiek7x" path="res://tower/tower.png" id="3_nyfrk"]
[ext_resource type="Texture2D" uid="uid://cdjfru0y2f3uu" path="res://game/cards/speech-bubble.png" id="4_n85fv"]
[ext_resource type="FontFile" uid="uid://bvxa4kms88wda" path="res://gui/centurion.ttf" id="5_rxwtu"]

[sub_resource type="Animation" id="Animation_70f8q"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_bs2ym")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_y1nka"]
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_bs2ym")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mmx8j"]
_data = {
"active": SubResource("Animation_70f8q"),
"inactive": SubResource("Animation_y1nka")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_axqjq"]
size = Vector2(23.3333, 37)

[node name="CardWizard" type="Sprite2D"]
texture_filter = 1
scale = Vector2(3, 3)
texture = ExtResource("1_bs2ym")
hframes = 3
vframes = 2
frame = 1
script = ExtResource("2_epinh")
metadata/_aseprite_wizard_config_ = {
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"op_exp": false,
"player": "AnimationPlayer",
"source": "res://game/cards/card_wizard.ase"
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mmx8j")
}

[node name="Tower" type="Sprite2D" parent="."]
position = Vector2(7.33333, 32)
texture = ExtResource("3_nyfrk")
region_enabled = true
region_rect = Rect2(80, 16, 16, 16)

[node name="Tower2" type="Sprite2D" parent="."]
position = Vector2(23.3333, 32)
texture = ExtResource("3_nyfrk")
region_enabled = true
region_rect = Rect2(64, 16, 16, 16)

[node name="Tower3" type="Sprite2D" parent="."]
position = Vector2(-8.66667, 32)
texture = ExtResource("3_nyfrk")
region_enabled = true
region_rect = Rect2(48, 16, 16, 16)

[node name="TutorialTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="SpeechBubble" type="Sprite2D" parent="."]
visible = false
position = Vector2(-57.6667, -26.6667)
texture = ExtResource("4_n85fv")

[node name="Label" type="Label" parent="SpeechBubble"]
offset_left = -48.0
offset_top = -10.0
offset_right = 855.0
offset_bottom = 147.0
scale = Vector2(0.1, 0.1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_rxwtu")
theme_override_font_sizes/font_size = 40
text = "aaafb"
autowrap_mode = 3

[node name="Timer" type="Timer" parent="SpeechBubble"]
wait_time = 5.0
one_shot = true

[node name="Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area"]
position = Vector2(7.33333, 5.5)
shape = SubResource("RectangleShape2D_axqjq")

[connection signal="input_event" from="Area" to="." method="_on_area_input_event"]
